# CyberLiveVoiceAI

./: .gitignore  Cargo.toml  LICENSE  README.md
brain/: .env.example  Cargo.toml
brain/cyber_readerLUA/: init.lua
brain/cyber_senderLUA/: init.lua
brain/src/: main.rs
src/: audio.rs  lib.rs
