[package]
name = "cyber_live_brain"
version = "1.2.5"
edition = "2021"

[dependencies]
# Global keyboard hook for Numpad 7
device_query = "1.1.3"

# OpenAI API Communication
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment Variables for .env
dotenv = "0.15.0"

# Audio Capture (Microphone)
cpal = "0.15.2"

# WAV File Processing (Whisper Compatibility)
hound = "3.5.0"